fix(search): fix border on search from cutting off corner

--- a/src/components/inputs/Search/SearchBar/styles.css
+++ b/src/components/inputs/Search/SearchBar/styles.css
@@ -29,6 +29,7 @@
   font-size: 16px;
   font-weight: 400;
   border: none;
+  border-radius: 5px;
   outline: none;
   padding-left: 26px;
   padding-right: 26px;
